Reduced Top 5 Majors image size to prevent cutoff in right-hand sidebar; reduced subheader quote author font size to 12 on all screen sizes

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -72,7 +72,6 @@
 	
 	#subheader { height: 105px; overflow: visible; }
 	#subheader blockquote { width: 450px; }
-	#subheader .subhead_author { font-size: 12px; }
 	#subheader .subheader_studentimg { margin-right: 10px; }
 	#subheader .subhead_quotelink { padding-top: 9px; }
 	
